Murphy System/archive/artifacts/outputs/workspace_output_1769163393_2518.txt
  File "<string>", line 21
    print(f'Open braces: {script13.count({)}')
                                             ^
SyntaxError: f-string: closing parenthesis ')' does not match opening parenthesis '{'
